--- a/west.yml
+++ b/west.yml
@@ -21,6 +21,8 @@ manifest:
   remotes:
     - name: upstream
       url-base: https://github.com/zephyrproject-rtos
+    - name: apache
+      url-base: https://github.com/apache
 
   #
   # Please add items below based on alphabetical order
@@ -85,8 +87,9 @@ manifest:
     - name: mcuboot
       revision: 80a76f4af4314635bef83272779ddbed6021fc32
       path: bootloader/mcuboot
-    - name: mcumgr
-      revision: 1843fdce2b008b45f9cc8b38dd9a57a575ab50f6
+    - name: mynewt-mcumgr
+      remote: apache
+      revision: pull/79/head
       path: modules/lib/mcumgr
     - name: net-tools
       revision: 1080094bc246357c6c35e80e8b2d5d0ce7e0d963
