--- a/west.yml
+++ b/west.yml
@@ -86,7 +86,7 @@ manifest:
       revision: 1084100cf4d3c17c4e212f167e3fc0199aa898de
       path: bootloader/mcuboot
     - name: mcumgr
-      revision: dcf32c7f340a10e6e6482feb311cb4fa71953fd3
+      revision: pull/15/head
       path: modules/lib/mcumgr
     - name: net-tools
       revision: 1080094bc246357c6c35e80e8b2d5d0ce7e0d963
