--- a/subsys/storage/flash_stream_write/Kconfig
+++ b/subsys/storage/flash_stream_write/Kconfig
@@ -4,21 +4,21 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-menuconfig FLASH_BUFFERED_WRITE
-	bool "Flash Buffered Write"
+menuconfig FLASH_STREAM_WRITE
+	bool "Flash stream Write"
 	select FLASH_PAGE_LAYOUT
 	help
-	  Enable support of flash buffered writes
+	  Enable support of flash stream writes
 
-if FLASH_BUFFERED_WRITE
-config FBW_ERASE
+if FLASH_STREAM_WRITE
+config FSW_ERASE
 	bool "Perform erase operations"
 	help
 	  If disabled an external actor must erase the flash area being written
-	  to prior to invoking 'fbw_write'.
+	  to prior to invoking 'fsw_write'.
 
-module = FBW
-module-str = flash buffered write
+module = FSW
+module-str = flash stream write
 source "subsys/logging/Kconfig.template.log_config"
 
-endif # FLASH_BUFFERED_WRITE
+endif # FLASH_STREAM_WRITE
