--- a/tests/subsys/storage/stream/stream_flash/prj.conf
+++ b/tests/subsys/storage/stream/stream_flash/prj.conf
@@ -7,6 +7,6 @@
 CONFIG_ZTEST=y
 CONFIG_FLASH=y
 CONFIG_FLASH_PAGE_LAYOUT=y
-CONFIG_FLASH_BUFFERED_WRITE=y
 CONFIG_DEBUG_OPTIMIZATIONS=y
-CONFIG_FBW_ERASE=y
+CONFIG_STREAM_FLASH_ERASE=y
+CONFIG_STREAM_FLASH=y
