--- a/subsys/storage/CMakeLists.txt
+++ b/subsys/storage/CMakeLists.txt
@@ -1,4 +1,4 @@
 # SPDX-License-Identifier: Apache-2.0
 
 add_subdirectory_ifdef(CONFIG_FLASH_MAP  flash_map)
-add_subdirectory_ifdef(CONFIG_FLASH_BUFFERED_WRITE flash_buffered_write)
+add_subdirectory(stream)
